@@ -1,3 +1,8 @@
+Thu Jul 16 18:30:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* hash.c (rb_hash_aset, recursive_hash): rejects recursive hash.
+	  [ruby-core:22921]
+
 Thu Jul 16 18:28:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* id.c (Init_id), vm.c (vm_exec): @#__ThrowState__ is no longer
